--- a/main/2d_Phaser3_1-1.html
+++ b/main/2d_Phaser3_1-1.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="2d_Phaser3.css">
   <title>Phaser 3 スクロールアクション</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-  <script src="js/2d_Phaser3.js" defer></script>
+  <script src="js/2d_Phaser3_1-1.js" defer></script>
 </head>
 <body></body>
 </html>
