更新しました

--- a/main/stageSelect.html
+++ b/main/stageSelect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ステージ選択</title>
-    <link rel="stylesheet" href="./stageSelect.css">
+    <link rel="stylesheet" href="./css/stageSelect.css">
 </head>
 <body>
     <div class="container">
@@ -12,27 +12,27 @@
         <h1>STAGE SELECT</h1>
         <div class="stage-grid">
             <div class="stage-button" onclick="goToStage(1)">
-                <img src="./art1_489.png" alt="Stage 1">
+                <img src="./css/art1_489.png" alt="Stage 1">
                 <p>STAGE 1</p>
             </div>
             <div class="stage-button" onclick="goToStage(2)">
-                <img src="./art1_489.png" alt="Stage 2">
+                <img src="./css/art1_489.png" alt="Stage 2">
                 <p>STAGE 2</p>
             </div>
             <div class="stage-button" onclick="goToStage(3)">
-                <img src="./art1_489.png" alt="Stage 3">
+                <img src="./css/art1_489.png" alt="Stage 3">
                 <p>STAGE 3</p>
             </div>
             <div class="stage-button" onclick="goToStage(4)">
-                <img src="./art1_489.png" alt="Stage 4">
+                <img src="./css/art1_489.png" alt="Stage 4">
                 <p>STAGE 4</p>
             </div>
             <div class="stage-button" onclick="goToStage(5)">
-                <img src="./art1_489.png" alt="Stage 5">
+                <img src="./css/art1_489.png" alt="Stage 5">
                 <p>STAGE 5</p>
             </div>
             <div class="stage-button" onclick="goToStage(6)">
-                <img src="./art1_489.png" alt="Stage 6">
+                <img src="./css/art1_489.png" alt="Stage 6">
                 <p>STAGE 6</p>
             </div>
         </div>
