--- a/main/top.html
+++ b/main/top.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>トップ画面</title>
-    <link rel="stylesheet" href="./top.css">
+    <link rel="stylesheet" href="./css/top.css">
 </head>
 <body>
     <div class="container">
