--- a/main/test.html
+++ b/main/test.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Phaser 3 スクロールアクション</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-  <script src="js/1-1.js" defer></script>
+  <script src="js/2d_Phaser3.js" defer></script>
 </head>
 <body></body>
 </html>
