連携おわたよ～
物語画面～ステージ画面　→終わり
JSとゲーム画面が完成したら最後までやるね

--- a/main/story.html
+++ b/main/story.html
@@ -67,6 +67,6 @@
   document.body.addEventListener('click', () => {
     cancelAnimationFrame(animationFrame); // アニメーション停止
     scrollText.style.bottom = '0'; // 文章をすぐに最終位置に配置
-    window.location.href = 'nextpage.html'; // 遷移先を指定
+    window.location.href = 'top.html'; // 遷移先を指定
   });
 </script>
