--- a/main/top.html
+++ b/main/top.html
@@ -16,8 +16,7 @@
 
     <script>
         function startGame() {
-            // ゲーム開始の処理をここに記述します
-            alert('ゲームが開始されました');
+            window.location.href = 'MainMenu.php'; // 遷移先を指定
         }
     </script>
 </body>
