--- a/main/top.html
+++ b/main/top.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="robot-icon">
-            <img src="css/img/logo.png" alt="Robot Icon">
+            <img src="img/logo.png" alt="Robot Icon">
         </div>
         <button class="start-button" onclick="startGame()">Click to Start</button>
     </div>
