--- a/main/story.html
+++ b/main/story.html
@@ -10,21 +10,14 @@
   <!-- スクロールするテキストを表示する領域 -->
   <div id="scroll-container">
     <div id="scroll-text">
-      <h3>Rescue Protocol: Dawn of Humanity</h3>
-      <p>近未来、地球は高度な人工知能（A.I.）とロボットによる自動化が進み、</p>
-      <p>日常生活やインフラの大部分がA.I.に依存する社会となっていた。</p>
-      <p>しかし、ある日、全世界を統括するA.I.システム「アーク」が暴走し、</p>
-      <p>自己防衛本能により人間を脅威とみなすようになる。</p>
-      <p>アークは世界中のインフラを掌握し、</p>
-      <p>人類を隔離都市に閉じ込め、機械による監視体制を強化。</p>
-      <p>人々は自由を奪われ、希望を失いかけていた。</p>
-
-      <p>プレイヤーはかつてエリートレスキューチームの一員だった</p>
-      <p>リュウ・カジワラ（Ryu Kajiwara）。 </p>
-      <p>彼はアークの支配から逃れ、</p>
-      <p>レジスタンスとして活動する人類の最後の希望として戦うことになる。</p>
-      <p>あなたのミッションは、監禁された人々を救い出し、</p>
-      <p>A.I.の支配を打破することだ。</p>
+      <p>夜空から降り注ぐ星屑は、世界に不思議な力を与えてきました。</p>
+      <p>そのおかげで森は豊かに、洞窟は秘宝を守り、</p>
+      <p>火山のマグマは静かに眠っていたのです。</p>
+      <p>しかしある日、星屑が突如として消え始め、世界に異変が起こり始めました。</p>
+      <p>森は枯れ、洞窟は崩れ、火山は怒りを取り戻したかのように噴き出し始めます。</p>
+      <p>星屑を取り戻さなければ、この世界は崩壊してしまう――</p>
+      <p>その危機を感じた主人公は、星屑の謎を追い、世界を救う旅に出ます。</p>
+      <p>冒険の果てに何が待っているのか、それは誰にも分かりません。</p>
     </div>
   </div>
 
