--- a/main/story.html
+++ b/main/story.html
@@ -10,14 +10,11 @@
   <!-- スクロールするテキストを表示する領域 -->
   <div id="scroll-container">
     <div id="scroll-text">
-      <p>夜空から降り注ぐ星屑は、世界に不思議な力を与えてきました。</p>
-      <p>そのおかげで森は豊かに、洞窟は秘宝を守り、</p>
-      <p>火山のマグマは静かに眠っていたのです。</p>
-      <p>しかしある日、星屑が突如として消え始め、世界に異変が起こり始めました。</p>
-      <p>森は枯れ、洞窟は崩れ、火山は怒りを取り戻したかのように噴き出し始めます。</p>
-      <p>星屑を取り戻さなければ、この世界は崩壊してしまう――</p>
-      <p>その危機を感じた主人公は、星屑の謎を追い、世界を救う旅に出ます。</p>
-      <p>冒険の果てに何が待っているのか、それは誰にも分かりません。</p>
+      <p>銀河中のロボットたちが参加する「フラッグレース」が開催！</p>
+      <p>主人公ロボ「ダッシュ」は、誰よりも速く旗に触れることを目指して走り抜ける！</p>
+      <p>ライバルたちやトラップ満載のコースを突破しながら、</p>
+      <p>ステージ最後のゴールフラッグを目指せ！</p>
+      <p>果たしてダッシュは、銀河最速の称号を手に入れられるのか？</p>
     </div>
   </div>
 
